# BankofStaked-CE

./: README.md  build.sh
scripts/: bank_perm.sh
src/: .bankofstaked.cpp.swp  .gen.token.cpp.swp  bankofstaked.cpp  gen.token.cpp  gen.token.hpp  lock.cpp  safedelegatebw.cpp  utils.cpp
tests/: CMakeLists.txt
tests/eosio.token/: CMakeLists.txt  README.md
tests/eosio.token/src/: eosio.token.cpp
tests/src/: bankofstaked_tests.cpp  contracts.hpp.in
views/pages/: index.ejs
